--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,7 +3,7 @@ name: Deploy Flask App to AWS Elastic Beanstalk
 on:
   push:
     branches:
-      - main  # Change this if your default branch is different
+      - main
 
 jobs:
   deploy:
@@ -49,9 +49,9 @@ jobs:
         id: check_env
         run: |
           if aws elasticbeanstalk describe-environments --application-name EducationAgentResearcher --query "Environments[?EnvironmentName=='EducationAgentEnv'].EnvironmentName" --output text | grep -q EducationAgentEnv; then
-            echo "env_exists=true" >> $GITHUB_ENV
+            echo "env_exists=true" >> $GITHUB_OUTPUT
           else
-            echo "env_exists=false" >> $GITHUB_ENV
+            echo "env_exists=false" >> $GITHUB_OUTPUT
           fi
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -59,7 +59,7 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
 
       - name: Create Environment (If It Doesn't Exist)
-        if: env.env_exists == 'false'
+        if: steps.check_env.outputs.env_exists == 'false'
         run: |
           eb create EducationAgentEnv --single --instance-type t2.micro --platform "Python 3.12"
         env:
