--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,7 +3,7 @@ name: Deploy Flask App to AWS Elastic Beanstalk
 on:
   push:
     branches:
-      - main
+      - main  # Adjust if your default branch is different
 
 jobs:
   deploy:
@@ -18,11 +18,11 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install AWS CLI
-        run: pip install awscli --upgrade --user
+      - name: Install AWS CLI (Pinned Version)
+        run: pip install awscli==1.27.66 --upgrade --user
 
-      - name: Install Elastic Beanstalk CLI
-        run: pip install awsebcli --upgrade --user
+      - name: Install Elastic Beanstalk CLI (Pinned Version)
+        run: pip install awsebcli==3.20.3 --upgrade --user
 
       - name: Configure AWS Credentials
         run: |
@@ -48,30 +48,4 @@ jobs:
       - name: Check if Environment Exists
         id: check_env
         run: |
-          if aws elasticbeanstalk describe-environments --application-name EducationAgentResearcher --query "Environments[?EnvironmentName=='EducationAgentEnv'].EnvironmentName" --output text | grep -q EducationAgentEnv; then
-            echo "env_exists=true" >> $GITHUB_OUTPUT
-          else
-            echo "env_exists=false" >> $GITHUB_OUTPUT
-          fi
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-
-      - name: Create Environment (If It Doesn't Exist)
-        if: steps.check_env.outputs.env_exists == 'false'
-        run: |
-          eb create EducationAgentEnv --single --instance-type t2.micro --platform "Python 3.12"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-
-      - name: Deploy to AWS Elastic Beanstalk
-        run: |
-          eb use EducationAgentEnv
-          eb deploy EducationAgentEnv
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          if aws elasticbeanstalk describe-environments --application-name EducationAgentResearcher --query "Environments[?EnvironmentName=='EducationAgentEnv'].EnvironmentName" --output text |
