--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
+    
+      - name: Install boto
+        run: pip install botocore==1.31.87 --user
 
       - name: Install AWS CLI (Pinned Version)
         run: pip install awscli==1.38.4 --user
